Fix BASE64 and Gson bug.